--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        > [!STOP]
+        > [!NOTE]
         ## Before continuing:
         ### Please try searching for [existing reports](https://github.com/linuxmint/cinnamon/issues?q=is%3Aissue+state%3Aall) that may match the behavior you're seeing. *If you find one, add to that issue instead of opening a new one*. Include any relevant details that may differ from the original author's.
         ### If this is specifically an issue with Wayland, please report it at the [Wayland issue tracker](https://github.com/linuxmint/wayland/issues/new?assignees=&labels=bug&projects=&template=bug_report.yaml).
