--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        > [!NOTE]
+        > [!STOP!]
         > Testing
         ## Before continuing:
         ### Please try searching for [existing reports](https://github.com/linuxmint/cinnamon/issues?q=is%3Aissue+state%3Aall) that may match the behavior you're seeing. *If you find one, add to that issue instead of opening a new one*. Include any relevant details that may differ from the original author's.
